--- a/src/components/markdown/CardDistributionTableV2.astro
+++ b/src/components/markdown/CardDistributionTableV2.astro
@@ -129,51 +129,48 @@ const rows = [
   ['🌈', '7', '🟩', '7', 'square', 'textured-green', '117'],
   ['🌈', '8', '🟩', '8', 'square', 'textured-green', '118'],
   ['🌈', '9', '🟩', '9', 'square', 'textured-green', '119'],
-  ['🔥', '10', '🖤', '0', 'heart', 'textured-black', '120'],
-  ['🔥', '11', '🖤', '1', 'heart', 'textured-black', '121'],
-  ['🔥', '12', '🖤', '2', 'heart', 'textured-black', '122'],
-  ['🔥', '13', '🖤', '3', 'heart', 'textured-black', '123'],
-  ['🔥', '14', '🖤', '4', 'heart', 'textured-black', '124'],
-  ['🍊', '10', '🖤', '5', 'heart', 'textured-black', '125'],
-  ['🍊', '11', '🖤', '6', 'heart', 'textured-black', '126'],
-  ['🍊', '12', '🖤', '7', 'heart', 'textured-black', '127'],
-  ['🍊', '13', '🖤', '8', 'heart', 'textured-black', '128'],
-  ['🍊', '14', '🖤', '9', 'heart', 'textured-black', '129'],
-  ['💧', '10', '⚫️', '0', 'circle', 'textured-black', '130'],
-  ['💧', '11', '⚫️', '1', 'circle', 'textured-black', '131'],
-  ['💧', '12', '⚫️', '2', 'circle', 'textured-black', '132'],
-  ['💧', '13', '⚫️', '3', 'circle', 'textured-black', '133'],
-  ['💧', '14', '⚫️', '4', 'circle', 'textured-black', '134'],
-  ['🍆', '10', '⚫️', '5', 'circle', 'textured-black', '135'],
-  ['🍆', '11', '⚫️', '6', 'circle', 'textured-black', '136'],
-  ['🍆', '12', '⚫️', '7', 'circle', 'textured-black', '137'],
-  ['🍆', '13', '⚫️', '8', 'circle', 'textured-black', '138'],
-  ['🍆', '14', '⚫️', '9', 'circle', 'textured-black', '139'],
-  ['⭐', '10', '🤍', '0', 'heart', 'textured-white', '140'],
-  ['⭐', '11', '🤍', '1', 'heart', 'textured-white', '141'],
-  ['⭐', '12', '🤍', '2', 'heart', 'textured-white', '142'],
-  ['⭐', '13', '🤍', '3', 'heart', 'textured-white', '143'],
-  ['⭐', '14', '🤍', '4', 'heart', 'textured-white', '144'],
-  ['💭', '10', '🤍', '5', 'heart', 'textured-white', '145'],
-  ['💭', '11', '🤍', '6', 'heart', 'textured-white', '146'],
-  ['💭', '12', '🤍', '7', 'heart', 'textured-white', '147'],
-  ['💭', '13', '🤍', '8', 'heart', 'textured-white', '148'],
-  ['💭', '14', '🤍', '9', 'heart', 'textured-white', '149'],
-  ['☘️', '10', '🔲', '0', 'circle/square', 'textured-white/textured-black', '150'],
-  ['☘️', '11', '🔲', '1', 'circle/square', 'textured-white/textured-black', '151'],
-  ['☘️', '12', '🔲', '2', 'circle/square', 'textured-white/textured-black', '152'],
-  ['☘️', '13', '🔲', '3', 'circle/square', 'textured-white/textured-black', '153'],
-  ['☘️', '14', '🔲', '4', 'circle/square', 'textured-white/textured-black', '154'],
-  ['🕷️', '10', '🔲', '5', 'circle/square', 'textured-white/textured-black', '155'],
-  ['🕷️', '11', '🔲', '6', 'circle/square', 'textured-white/textured-black', '156'],
-  ['🕷️', '12', '🔲', '7', 'circle/square', 'textured-white/textured-black', '157'],
-  ['🕷️', '13', '🔲', '8', 'circle/square', 'textured-white/textured-black', '158'],
-  ['🕷️', '14', '🔲', '9', 'circle/square', 'textured-white/textured-black', '159'],
+  ['🔥', 'X', '🖤', '0', 'heart', 'textured-black', '120'],
+  ['🔥', 'J', '🖤', '1', 'heart', 'textured-black', '121'],
+  ['🔥', 'Q', '🖤', '2', 'heart', 'textured-black', '122'],
+  ['🔥', 'K', '🖤', '3', 'heart', 'textured-black', '123'],
+  ['🔥', 'A', '🖤', '4', 'heart', 'textured-black', '124'],
+  ['🍊', 'X', '🖤', '5', 'heart', 'textured-black', '125'],
+  ['🍊', 'J', '🖤', '6', 'heart', 'textured-black', '126'],
+  ['🍊', 'Q', '🖤', '7', 'heart', 'textured-black', '127'],
+  ['🍊', 'K', '🖤', '8', 'heart', 'textured-black', '128'],
+  ['🍊', 'A', '🖤', '9', 'heart', 'textured-black', '129'],
+  ['💧', 'X', '⚫️', '0', 'circle', 'textured-black', '130'],
+  ['💧', 'J', '⚫️', '1', 'circle', 'textured-black', '131'],
+  ['💧', 'Q', '⚫️', '2', 'circle', 'textured-black', '132'],
+  ['💧', 'K', '⚫️', '3', 'circle', 'textured-black', '133'],
+  ['💧', 'A', '⚫️', '4', 'circle', 'textured-black', '134'],
+  ['🍆', 'X', '⚫️', '5', 'circle', 'textured-black', '135'],
+  ['🍆', 'J', '⚫️', '6', 'circle', 'textured-black', '136'],
+  ['🍆', 'Q', '⚫️', '7', 'circle', 'textured-black', '137'],
+  ['🍆', 'K', '⚫️', '8', 'circle', 'textured-black', '138'],
+  ['🍆', 'A', '⚫️', '9', 'circle', 'textured-black', '139'],
+  ['⭐', 'X', '🔲', '0', 'circle/square', 'textured-white/textured-black', '140'],
+  ['⭐', 'J', '🔲', '1', 'circle/square', 'textured-white/textured-black', '141'],
+  ['⭐', 'Q', '🔲', '2', 'circle/square', 'textured-white/textured-black', '142'],
+  ['⭐', 'K', '🔲', '3', 'circle/square', 'textured-white/textured-black', '143'],
+  ['⭐', 'A', '🔲', '4', 'circle/square', 'textured-white/textured-black', '144'],
+  ['💭', 'X', '🔲', '5', 'circle/square', 'textured-white/textured-black', '145'],
+  ['💭', 'J', '🔲', '6', 'circle/square', 'textured-white/textured-black', '146'],
+  ['💭', 'Q', '🔲', '7', 'circle/square', 'textured-white/textured-black', '147'],
+  ['💭', 'K', '🔲', '8', 'circle/square', 'textured-white/textured-black', '148'],
+  ['💭', 'A', '🔲', '9', 'circle/square', 'textured-white/textured-black', '149'],
+  ['☘️', 'X', '🤍', '0', 'heart', 'textured-white', '150'],
+  ['☘️', 'J', '🤍', '1', 'heart', 'textured-white', '151'],
+  ['☘️', 'Q', '🤍', '2', 'heart', 'textured-white', '152'],
+  ['☘️', 'K', '🤍', '3', 'heart', 'textured-white', '153'],
+  ['☘️', 'A', '🤍', '4', 'heart', 'textured-white', '154'],
+  ['🕷️', 'X', '🤍', '5', 'heart', 'textured-white', '155'],
+  ['🕷️', 'J', '🤍', '6', 'heart', 'textured-white', '156'],
+  ['🕷️', 'Q', '🤍', '7', 'heart', 'textured-white', '157'],
+  ['🕷️', 'K', '🤍', '8', 'heart', 'textured-white', '158'],
+  ['🕷️', 'A', '🤍', '9', 'heart', 'textured-white', '159'],
   ['-', '-', '-', '-', '-', '-', 'notes'],
-  ['-', '-', '-', '-', '-', '-', 'notes'],
-  ['-', '-', '-', '-', '-', '-', 'notes'],
-  ['-', '-', '-', '-', '-', '-', 'notes'],
-  ['-', '-', '-', '-', '-', '-', 'cover/help'],
+  ['-', '-', '-', '-', '-', '-', 'cover'],
 ] as const satisfies string[][]
 ---
 
