--- a/src/components/markdown/SuitsTableV2.astro
+++ b/src/components/markdown/SuitsTableV2.astro
@@ -7,14 +7,14 @@ import ColorSuit from './ColorSuit.astro'
 import { cn } from '../../lib/cn'
 
 const rows = [
-  ['🔥', 'Fi-re', 'Red', '0', '0...14'],
-  ['💧', 'Wa-ter', 'Blue', '1', '0...14'],
-  ['⭐', 'Stars', 'Ye-llow', '2', '0...14'],
-  ['☘️', 'Clubs', 'Gre-en', '3', '0...14'],
-  ['🍊', 'Oran-ges', 'O-ran-ge', '4', '0...14'],
-  ['🍆', 'Egg-plants', 'Pur-ple', '5', '0...14'],
-  ['💭', 'Clo-uds', 'Whi-te', '6', '0...14'],
-  ['🕷️', 'Spi-ders', 'Bla-ck', '7', '0...14'],
+  ['🔥', 'Fi-re', 'Red', '0', '0...9 + XJQKA'],
+  ['💧', 'Wa-ter', 'Blue', '1', '0...9 + XJQKA'],
+  ['⭐', 'Stars', 'Ye-llow', '2', '0...9 + XJQKA'],
+  ['☘️', 'Clubs', 'Gre-en', '3', '0...9 + XJQKA'],
+  ['🍊', 'Oran-ges', 'O-ran-ge', '4', '0...9 + XJQKA'],
+  ['🍆', 'Egg-plants', 'Pur-ple', '5', '0...9 + XJQKA'],
+  ['💭', 'Clo-uds', 'Whi-te', '6', '0...9 + XJQKA'],
+  ['🕷️', 'Spi-ders', 'Bla-ck', '7', '0...9 + XJQKA'],
   ['🌸', 'Flo-wers', 'Pi-nk', '8', '0...9'],
   ['💎', 'Dia-monds', 'Cy-an', '9', '0...9'],
   ['💩', 'Poops', 'Bro-wn', '10', '0...9'],
